--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "client": "npm start --prefix client",
     "server": "npm run watch --prefix server",
     "watch": "npm run client & npm run server",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npm run test --prefix client & npm run test --prefix server",
     "deploy": "npm run build --prefix client && npm start --prefix server"
   },
   "keywords": [],
